<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NoQApp</string>
    <string name="time_stamp">TimeStamp</string>
    <string name="name">Name</string>
    <string name="table_code">Table Code : %1$s</string>
    <string name="detail">Detail</string>
    <string name="detail_menu_order">Detail Menu Order</string>
    <string name="total_price">Total Price : Rp. %1$s</string>
    <string name="order_received">Order Received</string>
    <string name="fab_home">Home Floating Action Button</string>
    <string name="register_here">Register Here</string>
    <string name="message_sign_up">Don\'t have an account?</string>
    <string name="message_login">Already have an account?</string>
    <string name="login_here">Login Here</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_success">Login Success</string>
    <string name="success_create_account">Account Created Successfully</string>
    <string name="password_validation">Min 8 Characters</string>
    <string name="logo_app">Logo App</string>
    <string name="login_failed">Login Failed</string>
    <string name="logout_success">Logout Successfully</string>
    <string name="wrong_password_and_email">Email or Password don\'t match</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_format_email">Enter the correct email format</string>
    <string name="noq_app">NoQ App</string>
    <string name="register_failed">Register Failed!</string>
    <string name="error_register_failed">Check your connection \nand Email must be unique</string>
    <string name="error_login_failed">Check your connection \nand Email or Password don\'t match</string>
    <string name="enter_unique_email">Email must be unique</string>
    <string name="drink_menu">Drink Menu</string>
    <string name="menu_name">Menu Name</string>
    <string name="price_menu">Rp. %1$s</string>
    <string name="total">Total</string>
    <string name="add">Add</string>
    <string name="add_image">Add Image</string>
    <string name="minus_image">Minus Image</string>
    <string name="count">0</string>
    <string name="order">Order</string>
    <string name="back_btn">Press "Back" Button Again to Exit</string>
    <string name="order_sucess">Order Success!</string>
    <string name="order_text_content">Please Wait For Your Order!</string>
    <string name="text_ok">OK</string>
    <string name="logout">Logout</string>
    <string name="text_logout">Are you sure you want to Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="table_code_hint">Table Code</string>
    <string name="enter_table_code">Enter Table Code</string>
    <string name="ex_table_code">code123</string>
    <string name="image_send_button">Image Send Button</string>
    <string name="check_button_above">Click the check button above</string>
    <string name="check_button">Click the check button</string>

    <string-array name="timeStamp">
        <item>20 April 2022</item>
        <item>17 Mei 2022</item>
        <item>6 Juni 2022</item>
        <item>18 Juli 2022</item>
        <item>15 Agustus 2022</item>
    </string-array>

    <string-array name="tableCode">
        <item>code1dkaiokoaw</item>
        <item>code2dkaiokoaw</item>
        <item>code3dkaiokoaw</item>
        <item>code4dkaiokoaw</item>
        <item>code5dkaiokoaw</item>
    </string-array>

    <string-array name="custName">
        <item>Agung</item>
        <item>Kusuma</item>
        <item>Oop</item>
        <item>Rocky</item>
        <item>Vasco</item>
    </string-array>

    <string-array name="listOrder">
        <item>Ice Coffe (1), Cappucino (5), Ice Coffe (1), Cappucino (2), Ice Coffe (1), Cappucino (2), Ice Coffe (1), Cappucino (2)</item>
        <item>Ice Coffe (2), Cappucino (4), Ice Coffe (1), Cappucino (2), Ice Coffe (1), Cappucino (2), Ice Coffe (1), Cappucino (2)</item>
        <item>Ice Coffe (3), Cappucino (3), Ice Coffe (1), Cappucino (2), Ice Coffe (1), Cappucino (2), Ice Coffe (1), Cappucino (2)</item>
        <item>Ice Coffe (4), Cappucino (2), Ice Coffe (1), Cappucino (2), Ice Coffe (1), Cappucino (2), Ice Coffe (1), Cappucino (2)</item>
        <item>Ice Coffe (5), Cappucino (1), Ice Coffe (1), Cappucino (2), Ice Coffe (1), Cappucino (2), Ice Coffe (1), Cappucino (2)</item>
    </string-array>

    <string-array name="totalPrice">
        <item>10.000</item>
        <item>20.000</item>
        <item>30.000</item>
        <item>40.000</item>
        <item>50.000</item>
    </string-array>

    <string-array name="data_name">
        <item>Coffee Milk</item>
        <item>Oreo Shake</item>
        <item>Oreo Brownie</item>
        <item>Hot Chocolate</item>
        <item>Orange Juice</item>
        <item>Pineapple Juice</item>
    </string-array>

    <integer-array name="data_price">
        <item>20000</item>
        <item>30000</item>
        <item>35000</item>
        <item>25000</item>
        <item>15000</item>
        <item>20000</item>
    </integer-array>

    <string-array name="data_photo">
        <item>https://images.unsplash.com/photo-1595609093453-ae6849030ce5</item>
        <item tools:ignore="TypographyDashes">https://images.unsplash.com/photo-1609234492483-99f24d2c711b</item>
        <item>https://images.unsplash.com/photo-1608659029048-b4a72736ab13</item>
        <item>https://images.unsplash.com/photo-1637401817405-a87e3955423c</item>
        <item>https://images.unsplash.com/photo-1600271886742-f049cd451bba</item>
        <item tools:ignore="TypographyDashes">https://images.unsplash.com/photo-1639059700210-501d8d907939</item>
    </string-array>

</resources>